# toy-script

./: README.md  logfire_docs.json  pyproject.toml
toy_script/: rag.py  settings.py
